# torch-weighttracker

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.in  README.md  bobs_calculator.md  discussions.md  pruning_segmentation_index_mapping_suggestions.md  pyproject.toml  pyrightconfig.json  torch_pruning_update.md  unit_reduction_builder.py  zero_units_pruning_plan.md
.github/workflows/: publish-to-pypi.yml
benchmarks/structured_unit_sum/: README.md  benchmark_timm_structured_unit_sum.py  naive_impl.py  structured_unit_sum_benchmark.ipynb
docs/: active_macs_tensor_spec.md  architecture.md  architecutre.md  calculation_plan_ownership_spec.md  canonical_unit_groups_spec.md  compiler.md  consumer_ignore_spec.md  core_calcs.md  generic_reduction_planner_spec.md  generic_reduction_types_and_parameter_sum_spec.md  group_lasso_testing_spec.md  problem_fix_log.md  problems.md  simplified_member_reduction_rule.md  spec.md  specs.md  unit_to_module_map.md
sanity_checks/: block_2_4_sparsity_playground.ipynb  pruning_weighttracker_compare.py  resnet_playground.ipynb  vit_playground.ipynb
scripts/: publish_new_version.sh
tests/: dependency_graph.py  fixtures_models.py  test_attention_axes_e2e.py  test_attention_axes_unit.py  test_attention_pruning_indices.py  test_calculation_runtime.py  test_calculation_specs.py  test_dependency_graph_reducer_plan_operations.py  test_group_creation.py  test_group_lasso_regularizer.py  test_l2_norm_distribution_tracker.py  test_linear_weight_sum_specs.py  test_mha_operations.py  test_mha_reducer_plan_correctness.py  test_missing_dependency_graph_architecture.py  test_model_structured_sparsity.py  test_module_bitrate_extractor.py  test_nvidia_2_4_sparsity_tracker.py  test_param_pr_unit.py  test_param_unit_calculator.py  test_parameter_sum_tracker.py  test_reducer_plan.py  test_reduction_plan_builder.py  test_sparsity_controller.py  test_structracker_fvcore_e2e.py  test_structure_tracker_ignore_config.py  test_structure_tracker_unit_extensive.py  test_structured_bobs_tracker.py  test_structured_unit_sum_runtime_invariants.py  test_timm_integration.py  test_timm_vit_integration.py  test_weight_reducer_identity.py  test_weight_tracker_unit_extensive.py  test_weighttracker_fvcore_e2e.py
tests/dev_local/: test_torch_pruning_structured_bops_parity.py
torch_structracker/: __init__.py  bitrate_extractor.py  canonical_units.py  consumer_ignore.py  extractor.py  reducer_plan.py  reducers.py  regularizers.py  structtracker.py  structure_tracker.py  utils.py  weight_operations.py  weight_reducers.py
torch_structracker/calculations/: __init__.py  active_params_pr_unit.py  active_units.py  base.py  bit_rate_pr_module.py  cached_calc.py  calculations.py  context.py  pipeline_calc.py  reduction_calc.py  registry.py  spec.md  spec.py  static_calc.py  structured_unit_count_from_norm.py  structured_unit_norm.py  structured_unit_sum.py  unit_to_module_map.py
torch_structracker/extractors/: codeq_bitrate_extractor.py  parameter_extractor.py
torch_structracker/operations/: __init__.py  base.py  conv.py  generic.py  linear.py  mha.py  norm.py  resolver.py
torch_structracker/planner/: reduction_ops.py  reduction_planner.py  reduction_rules.py
torch_structracker/plans/: bitrate_plan.py  mapping_plan.py  unit_weight_operation_plan.py
torch_structracker/reductions/: builder.py  compiler.py  helpers.py  ops.py
torch_structracker/regularizers/: __init__.py  base.py  group_lasso.py  group_lasso_w_bitrate.py  group_lasso_with_bitrate.py  regularizer.py
torch_structracker/trackers/: __init__.py  base.py  bobs_tracker.py  parameter_sum.py  structured_bops.py  structured_bops_tracker.py  structured_sparsity.py  trackers.py
torch_structracker/weight_calculations/: unit_count.py  unit_sum.py
torch_structure_analyser/: __init__.py  controller.py
torch_structure_analyser/analysis/: __init__.py  analyzer.py  rules.py  types.py
torch_structure_analyser/counter/: counter.py  torch_structure.code-workspace
torch_structure_analyser/dependency/: graph.py
torch_structure_analyser/pruner/: __init__.py
torch_structure_analyser/regularizers/: __init__.py  coupled.py
torch_structure_analyser/utils/: utils.py
torch_weighttracker/: __init__.py  canonical_units.py  consumer_ignore.py  weight_tracker.py
torch_weighttracker/calculations/: __init__.py  (+8 more)
(+80 files in other folders)
