[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torch-weighttracker"
version = "0.1.1"
description = "Tools for tracking structured weight sparsity in PyTorch models."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["pytorch", "torch", "weights", "tracking", "structured-sparsity", "pruning"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "torch>=2.0",
]

[project.optional-dependencies]
structured-bops = [
    "fvcore",
]
dev = [
    "build>=1.2",
    "fvcore",
    "pytest>=8.0",
    "ruff>=0.6",
    "timm>=1.0",
    "torchvision>=0.15",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/dadyownes15/torch-weighttracker"
Issues = "https://github.com/dadyownes15/torch-weighttracker/issues"
Repository = "https://github.com/dadyownes15/torch-weighttracker"

[tool.setuptools.packages.find]
where = ["."]
include = ["torch_weighttracker*"]

[tool.setuptools.package-data]
torch_weighttracker = ["py.typed"]

[tool.pytest.ini_options]
addopts = [
    "-ra",
    "--ignore=tests/test_attention_axes_e2e.py",
    "--ignore=tests/test_attention_axes_unit.py",
    "--ignore=tests/test_model_structured_sparsity.py",
    "--ignore=tests/test_sparsity_controller.py",
    "--ignore=tests/ignored",
]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
